--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,13 @@
 {
   "manifest_version": 3,
-  "name": "LinkedIn Post Extractor",
+  "name": "My Extension",
   "version": "1.0",
-  "description": "Extract post names from LinkedIn",
+  "description": "A Chrome extension example.",
+  "action": {
+    "default_title": "Click me!"
+  },
   "permissions": ["tabs", "activeTab", "storage", "scripting"],
+
   "background": {
     "service_worker": "background.js"
   },
