--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "My Extension",
+  "name": "Linkedin Scrapper",
   "version": "1.0",
   "description": "A Chrome extension example.",
   "action": {
@@ -14,7 +14,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["personNameScapper.js", "content.js"]
+      "js": ["personNameScapper.js", "linkedinLinks.js", "content.js"]
     }
   ]
 }
