--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,10 @@
   "manifest_version": 3,
   "name": "Linkedin Scrapper",
   "version": "1.0",
-  "description": "A Chrome extension example.",
+  "description": "This scraper scraps linkedin profiles from search.",
   "action": {
-    "default_title": "Click me!"
+    "default_title": "Click me to scrape!",
+    "default_icon": "icons/icon.png"
   },
   "permissions": ["tabs", "activeTab", "storage", "scripting"],
 
@@ -13,7 +14,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://www.linkedin.com/*"],
       "js": [
         "personNameScapper.js",
         "linkedinLinks.js",
